--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,7 @@ article img.full-width-image {
     border-radius: 0.6rem;
     background-color: var(--menu);
 }
-
+file:///C:/Users/Brad/Desktop/New%20folder/medications.html
 article img.full-width-image:last-child {
     margin-bottom: 2rem;
 }
