--- a/styles.css
+++ b/styles.css
@@ -85,9 +85,10 @@ header .logo i {
 /* ---------- Hamburger Button (Mobile Only) ---------- */
 #hamburger {
     display: none;
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin-right: 2px;
     padding-bottom: 4px;
+    padding-left: 2rem;
     background: none;
     border: none;
     color: var(--text);
