--- a/styles.css
+++ b/styles.css
@@ -86,9 +86,9 @@ header .logo i {
 #hamburger {
     display: none;
     font-size: 2.5rem;
-    margin-right: 2px;
-    padding-bottom: 4px;
-    padding-left: 2rem;
+    margin-right: 0;
+    padding-bottom: 6px;
+    padding-left: 0;
     background: none;
     border: none;
     color: var(--text);
