--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
 header {
     position: fixed;
     top: 0;
-    left: 260px;
+    left: 240px;
     right: 0;
     z-index: 1200;
     height: 60px;
@@ -68,8 +68,8 @@ header .logo {
     align-items: center;
     gap: 0.6rem;
     padding-left: 16px;
-    font-size: 0.9rem;
-    font-weight: 700;
+    font-size: 1rem;
+    font-weight: 600;
     color: var(--text);
 }
 
@@ -80,6 +80,13 @@ header .logo i {
     padding: 0;
     border-radius: 0.2rem;
     margin-right: -3px;
+}
+
+.logo-image{
+  width: 40px;
+  height: 40px;
+  margin-left: -13px;
+  margin-right: -17px;
 }
 
 /* ---------- Hamburger Button (Mobile Only) ---------- */
@@ -99,7 +106,7 @@ header .logo i {
 nav#sidebar {
     position: fixed;
     top: 0;
-    width: 260px;
+    width: 240px;
     height: 100%;
     padding: 80px 20px 0 20px;
     background-color: var(--menu);
@@ -138,7 +145,7 @@ nav#sidebar ul li a.active {
 /* ---------- Main Content (Desktop) ---------- */
 main {
     flex: 1 1 auto;
-    margin-left: 260px;
+    margin-left: 240px;
     margin-top: 60px;
     margin-bottom: 2rem;
     padding: 0;
@@ -216,7 +223,7 @@ article img.full-width-image:last-child {
 @media (max-width: 768px) {
     header { position: static; height: 70px; left: 0; }
     #hamburger { display: block; }
-    header .logo { padding-left: 7px; font-size: 1.1rem; font-weight: 700; }
+    header .logo { padding-left: 7px; font-size: 1.1rem; font-weight: 600; }
     header .logo i { font-size: 1.3rem; }
 
     main { margin: 0; margin-bottom: 4rem; height: auto; padding: 1rem; }
@@ -253,7 +260,7 @@ article img.full-width-image:last-child {
     nav#sidebar ul li a.tap-active {
         background-color: var(--focus);
         color: var(--text);
-        transition: background-color 0s;
+        transition: background-color 0.15s;
     }
 
     main article {
