--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ header .logo i {
     display: none;
     font-size: 2.2rem;
     margin-right: 0;
+    margin-bottom: -10px;
     padding-bottom: 0;
     padding-left: 0;
     background: none;
