--- a/styles.css
+++ b/styles.css
@@ -145,69 +145,72 @@ nav#sidebar ul li a.active {
 
 /* ---------- Main Content (Desktop) ---------- */
 
-.responsive-table {
-  display: grid;
-  grid-template-columns: 130px 1fr;
-  column-gap: 1px;
-  width: 100%; /* scales with parent */
-  color: #000000;
-  font-weight: 500;
+.table {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border: 0px solid #ccc;
+  margin-bottom: 30px;
+  margin-top: 20px;
 }
 
-.row {
-  display: contents; /* lets grid handle the layout */
-}
-
-.row1 {
-  background: var(--accent);
-  border: 0px solid #000;
-  padding: 10px;
-}
-
-.top-left {
+.top {
 border-top-left-radius: 0.6rem;
-}
-
-.top-right {
 border-top-right-radius: 0.6rem;
 }
 
-.bottom-left {
+.bottom {
 border-bottom-left-radius: 0.6rem;
+border-bottom-right-radius: 0.6rem; 
 }
 
-.bottom-right {
-border-bottom-right-radius: 0.6rem;
-}
+.row1 {
+  background: rgb(176,176,176, 0.1);
+  border: solid #b0b0b0;
+  padding: 10px;
+  border-width: 1px 1px 0 1px; 
+  text-align: center;
 
+}
 
 .row2 {
-  background: #00ac46;
-  border: 0px solid #000;
-  padding: 10px;
+  background: rgb(0,172,70, 0.1);
+  border: solid #00ac46;
+  border-width: 0 1px 0 1px; /* top right bottom left */
 }
 
 .row3 {
-  background: #fdc500;
-  border: 0px solid #000;
-  padding: 10px;
+  background: rgb(253,197,0, 0.1);
+  border: solid #fdc500;
+  border-width: 0 1px 0 1px; 
 }
 
 .row4 {
-  background: #fd8c00;
-  border: 0px solid #000;
-  padding: 10px;
+  background: rgb(253,140,0, 0.1);
+  border: solid #fd8c00;
+  border-width: 0 1px 0 1px; 
 }
 
 .row5 {
-  background: #dc0000;
-  border: 0px solid #000;
-  padding: 10px;
+  background: rgb(220,0,0, 0.1);
+  border: 1px solid #dc0000;
+  border-width: 0 1px 1px 1px; 
 }
 
-.row ul {
-    margin: 0 0 0 13px;
+.row2, .row3, .row4, .row5 {
+padding:10px 20px 10px 20px;
+}
+
+.table ul li {
+    margin: 0 0 0 0;
     padding-left: 0rem;
+    list-style-position: outside;
+    list-style-type: disc;
+}
+
+.table ul:last-child {
+    margin: 0.5rem 0 0.8rem 1.4rem;
+    padding-left: 0.5rem;
     list-style-position: outside;
     list-style-type: disc;
 }
@@ -232,7 +235,7 @@ main article {
     background: var(--bg);
     border-radius: 0.6rem;
     font-size: 0.8rem;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.7;
     color: var(--accent);
 }
@@ -370,16 +373,16 @@ video {
     font-weight: 500;
     }
 
-   .responsive-table {
-  display: grid;
-  grid-template-columns: 120px 1fr;
-  column-gap: 0px;
-  width: 100%; /* scales with parent */
-  color: #000000;
-  font-weight: 500;
-  font-size: 0.9rem;
-  margin:0px;
-  }
+.table {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border: 0px solid #ccc;
+}
+
+.row2, .row3, .row4, .row5{
+padding:20px 20px 14px 20px;
+}
 
     article img.full-width-image { width: 100%; }
 
