--- a/styles.css
+++ b/styles.css
@@ -346,7 +346,7 @@ video {
   position: absolute;  /* position relative to button */
   left: 0;
   width: 100%;
-  height: 3px;
+  height: 0.1rem;
   background-color: var(--text);
   border-radius: 2px;
   transition: all 0.4s ease;
