--- a/styles.css
+++ b/styles.css
@@ -287,9 +287,18 @@ main article li { margin-bottom: 0.4rem; }
     border-bottom: 1px solid rgba(255, 255, 255, 0.15);
 }
 
+article img.full-width-image-silverstein {
+    display: block;
+    width: 100%;
+    height: auto;
+    margin: 1rem 0 1.5rem 0;
+    padding: 0;
+    border-radius: 0.6rem;
+    background-color: var(--menu);
+
 article img.full-width-image {
     display: block;
-    width: 90%;
+    width: 100%;
     height: auto;
     margin: 1rem 0 0 0;
     padding: 0;
