--- a/styles.css
+++ b/styles.css
@@ -411,11 +411,16 @@ article img.full-width-image:first-child {
     font-size: 0.9rem;
 }
 
-video {
+.video-wrapper {
+  border-radius: 0.6rem;
+  overflow: hidden;   /* CRITICAL */
+  width: 100%;
+}
+
+.video-wrapper video {
   width: 100%;
   height: auto;
-  border-radius: 0.6rem;
-  margin: 0;
+  display: block;
 }
 
 .custom-font {
