--- a/styles.css
+++ b/styles.css
@@ -338,7 +338,7 @@ font-size: 0.8rem;
   left: 0;
   margin-left: 50px;/* Align to left edge */
   cursor: pointer;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .center-text {
@@ -788,7 +788,7 @@ html {
   height: 45px;
   border: 0px solid var(--accent, #b0b0b0);
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.06);
+  background-color: #333334;
   display: flex;
   align-items: center;
   justify-content: center;
