--- a/styles.css
+++ b/styles.css
@@ -300,8 +300,8 @@ font-size: 0.8rem;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0,0,0,0.5);
   justify-content: center;
   align-items: center;
